--- a/WebApplication2/Pages/Index.cshtml
+++ b/WebApplication2/Pages/Index.cshtml
@@ -17,13 +17,12 @@
         <form method="post" class="form-container">
             <div class="grid-container">
                 <div class="form-group">
-                    <label for="ID">ID:</label>
-                    <input type="text" id="ID" name="ID" required><br><br>
-                </div>
-
-                <div class="form-group">
-                    <label for="prod_area_id">prod_area_id:</label>
-                    <input type="text" id="prod_area_id" name="prod_area_id" required><br><br>
+                    <label for="prod_area_id">Select the Production Field:</label>
+                    <select name="prod_area_id" id="prod_area_id">
+                        <option value="1">Burun Field</option>
+                        <option value="3">Ne Burun Field</option>
+                    </select>
+                    <br><br>
                 </div>
 
                 <div class="form-group">
@@ -32,52 +31,52 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="DayInMonth">DayInMonth:</label>
+                    <label for="DayInMonth">Day in Month:</label>
                     <input type="number" id="DayInMonth" name="DayInMonth" min="1" max="31" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="SPPFluid">SPPFluid:</label>
+                    <label for="SPPFluid">SPP Fluid Flow Temp. (m<sup>3</sup>/d)</label>
                     <input type="number" step="any" id="SPPFluid" name="SPPFluid" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="SPPOil">SPPOil(MT/d):</label>
+                    <label for="SPPOil">SPP Oil (MT/d):</label>
                     <input type="number" step="any" id="SPPOil" name="SPPOil" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="CorrFact">CorrFact:</label>
+                    <label for="CorrFact">Correction Factor:</label>
                     <input type="number" step="any" id="CorrFact" name="CorrFact" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="AvgBSW">AvgBSW:</label>
+                    <label for="AvgBSW">Avg. BS&W:</label>
                     <input type="number" step="any" id="AvgBSW" name="AvgBSW" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="AvgBSWSPP">AvgBSWSPP:</label>
+                    <label for="AvgBSWSPP">Avg. BSW&SPP:</label>
                     <input type="number" step="any" id="AvgBSWSPP" name="AvgBSWSPP" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="VolRedFact">VolRedFact:</label>
+                    <label for="VolRedFact">Volume Reduction Factor:</label>
                     <input type="number" step="any" id="VolRedFact" name="VolRedFact" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="SPPFlTemp">SPPFlTemp:</label>
+                    <label for="SPPFlTemp">SPP Flow Temp. (<sup>o</sup>C):</label>
                     <input type="number" step="any" id="SPPFlTemp" name="SPPFlTemp" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="OilDens">OilDens:</label>
+                    <label for="OilDens">Oil Density 15.56 <sup>o</sup>C (g/cc):</label>
                     <input type="number" step="any" id="OilDens" name="OilDens" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="OilDelTNT">OilDelTNT:</label>
+                    <label for="OilDelTNT">Oil Delivered on TNT Today (MT):</label>
                     <input type="number" step="any" id="OilDelTNT" name="OilDelTNT" required><br><br>
                 </div>
 
@@ -87,67 +86,67 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="DailyGasIPR">DailyGasIPR:</label>
+                    <label for="DailyGasIPR">Daily Gas IPR:</label>
                     <input type="number" step="any" id="DailyGasIPR" name="DailyGasIPR" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="AvailForLifting">AvailForLifting:</label>
+                    <label for="AvailForLifting">Available For Liftings (MT):</label>
                     <input type="number" step="any" id="AvailForLifting" name="AvailForLifting" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="LiftedToday">LiftedToday:</label>
+                    <label for="LiftedToday">Lifted Today (MT):</label>
                     <input type="number" step="any" id="LiftedToday" name="LiftedToday" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="LiftPort">LiftPort:</label>
+                    <label for="LiftPort">Lifting Port:</label>
                     <input type="number" step="any" id="LiftPort" name="LiftPort" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="FlaredGas">FlaredGas:</label>
+                    <label for="FlaredGas">Flared Gas (m<sup>3</sup>/d):</label>
                     <input type="number" step="any" id="FlaredGas" name="FlaredGas" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="ExportGas">ExportGas:</label>
+                    <label for="ExportGas">Export Gas (m<sup>3</sup>/d):</label>
                     <input type="number" step="any" id="ExportGas" name="ExportGas" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="SPPTotGas">SPPTotGas:</label>
+                    <label for="SPPTotGas">SPP Total Gas (m<sup>3</sup>/d):</label>
                     <input type="number" step="any" id="SPPTotGas" name="SPPTotGas" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="NewOil">NewOil(Daily MT):</label>
+                    <label for="NewOil">New Oil (Daily MT):</label>
                     <input type="number" step="any" id="NewOil" name="NewOil" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="AvgVishkaOil">AvgVishkaOil:</label>
+                    <label for="AvgVishkaOil">Avg. Vishka Oil (MT/d):</label>
                     <input type="number" step="any" id="AvgVishkaOil" name="AvgVishkaOil" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="VishkaInletPress">VishkaInletPress:</label>
+                    <label for="VishkaInletPress">Vishka Inlet Pressure (bar):</label>
                     <input type="number" step="any" id="VishkaInletPress" name="VishkaInletPress" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="LPWaterInj">LPWaterInj:</label>
+                    <label for="LPWaterInj">LP Water Injected (m<sup>3</sup>/d):</label>
                     <input type="number" step="any" id="LPWaterInj" name="LPWaterInj" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="HPWaterInj">HPWaterInj:</label>
+                    <label for="HPWaterInj">HP Water Injected (m<sup>3</sup>/d):</label>
                     <input type="number" step="any" id="HPWaterInj" name="HPWaterInj" required><br><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="WaterDisposed">WaterDisposed:</label>
+                    <label for="WaterDisposed">Water Disposed (m<sup>3</sup>/d):</label>
                     <input type="number" step="any" id="WaterDisposed" name="WaterDisposed" required><br><br>
                 </div>
             </div>
